// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha-control"
  >
    <div
      class="rc-alpha-control__checkboard"
    >
      <div
        class="rc-checkboard"
        style="background: url("null");"
      />
    </div>
    <div
      class="rc-alpha-control__gradient"
      style="background: linear-gradient(to right, rgba(255, 0, 0, 0) 0%, rgb(255, 0, 0) 100%);"
    />
    <div
      class="rc-alpha-control__container"
    >
      <div
        class="rc-alpha-control__pointer"
        style="left: 100%;"
      >
        <div
          class="rc-alpha-control__slider"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkboard renders children correctly 1`] = `
<DocumentFragment>
  <button
    class="rc-checkboard"
    style="background: url("null");"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Checkboard renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-checkboard"
    style="background: url("null");"
  />
</DocumentFragment>
`;

exports[`EditableInput renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-editable-input"
  >
    <input
      class="rc-editable-input__input"
      id="rc-editable-input-1"
      placeholder="#fff"
      spellcheck="false"
      value="UNDEFINED"
    />
    <label
      class="rc-editable-input__label"
      for="rc-editable-input-1"
    >
      Hex
    </label>
  </div>
</DocumentFragment>
`;

exports[`Hue renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-hue-control"
  >
    <div
      class="rc-hue-control__container"
      style="background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
    >
      <div
        class="rc-hue-control__pointer"
        style="left: 0%;"
      >
        <div
          class="rc-hue-control__slider"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Saturation renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-saturation"
    style="background: rgb(255, 0, 0);"
  >
    <div
      class="rc-saturation__white"
      style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
    >
      <div
        class="rc-saturation__black"
        style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
      />
      <div
        class="rc-saturation__pointer"
        style="top: 0%; left: 100%;"
      >
        <div
          class="rc-saturation__circle"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Swatch renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="background: rgb(51, 51, 51); opacity: 0.4;"
      tabindex="0"
      title="#333"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders custom title correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="background: rgb(255, 255, 255);"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders with an onMouseOver handler correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="background: rgb(255, 255, 255);"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;
